@@ -73,13 +73,21 @@ main (const int argc, char* const argv[])
 verbose = 1;
 #endif
 
+  char *enable_test = getenv ("RMWTEST");
+  if (enable_test != NULL)
+    HOMEDIR = getenv ("HOME");
+  else
+  {
+
     /* rmw doesn't work on Windows yet */
     /*! @bug <a href="https://github.com/theimpossibleastronaut/rmw/issues/71">Running and building rmw on Windows</a> */
   #ifndef WIN32
-    HOMEDIR = getenv ("HOME");
+    HOMEDIR = get_homedir ();
   #else
+    /* FIXME: This shouldn't be retrieved via an environmental variable */
     HOMEDIR = getenv ("LOCALAPPDATA");
   #endif
+  }
 
   if (HOMEDIR != NULL)
     bufchk (HOMEDIR, MP);
@@ -197,6 +205,17 @@ Enter '%s -h' for more information\n"), argv[0]);
 }
 #endif
 
+const char *
+get_homedir (void)
+{
+  uid_t uid = geteuid ();
+  struct passwd *pwd = getpwuid(uid); /* don't free, see getpwnam() for details */
+
+  if (pwd == NULL)
+    return NULL;
+
+  return pwd->pw_dir;
+}
 
 int
 remove_to_waste (
